fixed spacing

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -345,20 +345,7 @@ input[type="submit"]:hover {
   display: none;
 }
 /* searched events page */
-.searchEventsTable {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 3fr));
-  gap: 30px;
-  place-items: center;
-  position: absolute;
-  background: rgba(255, 255, 255, 0.4);
-  top: 55%;
-  left: 30%;
-  width: 700px;
-  height: fit-content;
-  padding-bottom: 10px;
-  margin-left: 10px;
-}
+
 .event-card {
   margin: 10px;
   background-color: #fff;
